# rusty_fy

./: Cargo.toml  README.md  test.py
examples/: cubic_spline.py  linear_spline.py  option_bond.py  simple_bond.py
src/: lib.rs
src/fixed_income/: bonds.rs  mod.rs  option_embedded_bond.rs  simple_bond.rs
src/interpolate/: cubic_spline.rs  linear_spline.rs  mod.rs
