[package]
name = "rusty_fy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rusty_fy"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20.2", features = ["extension-module"]}
numpy = "0.20.0"
chrono = "0.4.34"
nalgebra = "0.32.3"
